--- a/study-note/java-study/base/异常.md
+++ b/study-note/java-study/base/异常.md
@@ -141,40 +141,40 @@ public class testController {
 
 
     @GetMapping(value = "exception")
-    public Result exception(@RequestParam(required = false) Integer value) {
-        Result result = null;
-        try {
-            dealService.deal(value);
-            result = Result.success();
-        } catch (MyException e) {
-            result = Result.serviceException(e.getCode(), e.getMessage());
-        }
-        return result;
-    }
+   public Result exception(@RequestParam(required = false) Integer value) {
+       Result result;
+       try {
+           dealService.deal(value);
+           result = Result.success();
+       } catch (MyException e) {
+           result = Result.serviceException(e.getCode(), e.getMessage());
+       }
+       return result;
+   }
 
-    @GetMapping(value = "exception2")
-    public Result exception2(@RequestParam(required = false) Integer value) {
-        Result result = null;
-        try {
-            dealService.deal_2(value);
-            result = Result.success();
-        } catch (MyRuntimeException e) {
-            result = Result.serviceException(e.getCode(), e.getMessage());
-        }
-        return result;
-    }
+   @GetMapping(value = "exception2")
+   public Result exception2(@RequestParam(required = false) Integer value) {
+       Result result;
+       try {
+           dealService.deal_2(value);
+           result = Result.success();
+       } catch (MyRuntimeException e) {
+           result = Result.serviceException(e.getCode(), e.getMessage());
+       }
+       return result;
+   }
 
-    @GetMapping(value = "exception3")
-    public Result exception3(@RequestParam(required = false) Integer value) throws MyException, MyRuntimeException{
-        dealService.deal_3(value);
-        return  null;
-    }
+   @GetMapping(value = "exception3")
+   public Result exception3(@RequestParam(required = false) Integer value) throws MyException, MyRuntimeException{
+       dealService.deal_3(value);
+       return  Result.success();
+   }
 
-    @GetMapping(value = "exception4")
-    public Result exception4(@RequestParam(required = false) Integer value) throws Exception{
-        dealService.deal_4(value);
-        return  null;
-    }
+   @GetMapping(value = "exception4")
+   public Result exception4(@RequestParam(required = false) Integer value) throws Exception{
+       dealService.deal_4(value);
+       return  Result.success();
+   }
 }
 ```
 
