--- a/daily-note/2019-11/12.md
+++ b/daily-note/2019-11/12.md
@@ -1,10 +1,11 @@
 
 
 ## ConfigurationProperties
+spring-boot 提供该注解将配置文件的值映射到类上使用
 > @ConfigurationProperties :
-告诉SpringBoot将本类中的所有属性和配置文件中相关的配置进行绑定；
-prefix = "xxx"：配置文件中哪个下面的所有属性进行一一映射；
 只有这个组件是容器中的组件，才能使用容器提供的@ConfigurationProperties功能。
+通过@Autowired标签即可访问到该对象，不过在使用之前必须在使用类上面增加注解@EnableConfigurationProperties(DruidDataSourceProperties.class)
+prefix代表前缀，locations 代表映射的文件路径。
 
 ## WebMvcConfigurer接口
 >在Spring Boot 1.5版本都是靠重写WebMvcConfigurerAdapter的方法来添加自定义拦截器，消息转换器等
