--- a/study-note/java-study/base/基础(持续学习).md
+++ b/study-note/java-study/base/基础(持续学习).md
@@ -1,3 +1,38 @@
 
 ### `Double` 转 `Integer`
  `new Double(1.2).IntValue`
+
+### 将[{"key":"value"}]格式的Object对象转换为指定实体对象
+```Java
+public static Object Json2Object(Object obj, Class clazz)
+ throws IllegalAccessException, InstantiationException, NoSuchMethodException, InvocationTargetException {
+       if (null == obj) return null;  
+       JSONObject jsonObject = (JSONObject) JSON.toJSON(obj);
+       return JSONObject.parseObject(String.valueOf(jsonObject), clazz);
+   }
+```
+
+### 根据类名设置该类某个字段的值
+
+```Java
+//方法1 ：
+public static  Object setFieldValueByFieldName(Object object, String fieldName, Object value) throws NoSuchFieldException, IllegalAccessException {
+    Class clazz = object.getClass();
+    Field field = clazz.getDeclaredField(fieldName);
+    field.setAccessible(true);
+    field.set(object, value);
+    field.setAccessible(false);
+    return object;
+}
+
+//方法2
+public static Object setFieldValueBySetMethod(Object object, String fieldName, Object value) throws NoSuchFieldException, IllegalAccessException, NoSuchMethodException, InvocationTargetException {
+    Class clazz = object.getClass();
+    Field field = clazz.getDeclaredField(fieldName);
+    Method method = clazz.getDeclaredMethod("set" + ToolUtil.upperFirst(fieldName), field.getType());
+    field.setAccessible(true);
+    method.invoke(object, value);
+    field.setAccessible(false);
+    return object;
+}
+```
