--- a/study-note/java-study/base/异常.md
+++ b/study-note/java-study/base/异常.md
@@ -130,6 +130,7 @@ public class DealService {
 ```
 
 + testController
+
 ```Java
 @Api(tags = "测试接口", value = "test")
 @RestController
@@ -300,3 +301,11 @@ public class Result {
     }
 }
 ```
+
+
+## Java异常处理之InvocationTargetException
+Method.invoke
+当被调用的方法的内部抛出了异常而没有被捕获时，将由此异常接收
+
+## Spring MVC传参：Cannot construct instance of xxxxx(no Creators, like default construct, exist)
+添加默认构造函数
