--- a/study-note/java-study/base/基础(持续学习).md
+++ b/study-note/java-study/base/基础(持续学习).md
@@ -2,6 +2,17 @@
 ### `Double` 转 `Integer`
  `new Double(1.2).IntValue`
 
+### 字符串分割为数组
+```Java
+String str = "1,2,3,4";
+String[] sArr = str.split(",");
+```
+### 字符串substring
+```Java
+String s = "123,121,1"
+s=s.substring(0,s.lastIndexOf(","));
+// s = 123;
+```
 ### 将[{"key":"value"}]格式的Object对象转换为指定实体对象
 ```Java
 public static Object Json2Object(Object obj, Class clazz)
