--- a/study-note/java-study/base/异常.md
+++ b/study-note/java-study/base/异常.md
@@ -309,3 +309,18 @@ Method.invoke
 
 ## Spring MVC传参：Cannot construct instance of xxxxx(no Creators, like default construct, exist)
 添加默认构造函数
+
+## "[Ljava.lang.Object; cannot be cast to [Ljava.lang.String;"
+```java
+List<String> list = new ArrayList();
+...
+//(String[]) list.toArray(); // throw in here
+(String[]) list.toArray(new String[list.size]);
+// 在java的api中有两种方法：
+// 1.不带参数的toArray()
+// 如果不带参数，它会自动new Object[emails.size()],然后在(String[ ])强转，所以就会报错
+// 2. 带参数的toArray()
+// 在转换的的时候，指定参数(String[])(emails.toArray(new String[ emails.size()])),这样在转换的时候就不会报错了
+
+
+```
