12-2 主要修改excel模板、excel字典处理问题

--- a/study-note/java-study/base/基础(持续学习).md
+++ b/study-note/java-study/base/基础(持续学习).md
@@ -9,7 +9,7 @@ String[] sArr = str.split(",");
 ```
 ### 字符串substring
 ```Java
-String s = "123,121,1"
+String s = "123,121,1";
 s=s.substring(0,s.lastIndexOf(","));
 // s = 123;
 ```
