uniform-code-parent

--- a/study-note/java-study/base/基础(持续学习).md
+++ b/study-note/java-study/base/基础(持续学习).md
@@ -47,3 +47,25 @@ public static Object setFieldValueBySetMethod(Object object, String fieldName, O
     return object;
 }
 ```
+### Map
+<center>
+
+||遍历与put时的顺序|null键|线程同步(线程安全)|大小|速度
+|:--:|:--:|:--:|:--:|:--:|:--:|
+|HashMap|完全随机|最多只允许一条记录的键为Null|不支持|默认16，成倍增长|遍历与容量有关
+|LinkedHashMap|一致|最多只允许一条记录的键为Null|不支持|默认16，成倍增长|遍历与实际数据有关
+|Hashtable|x|不允许记录的键或者值为null|支持|默认11，增长是old*2+1|写入慢
+|TreeMap|默认按键值的升序排序|x|x|x|x
+|ConcurrentHashMap|x|x|支持|默认16，成倍增长|x
+
+</center>
+
+[makedown表格的使用](https://www.cnblogs.com/anliux/p/10805103.html)
+
+### 为什么覆盖equals时总要覆盖hashCode ？
+[java中equals，hashcode和==的区别](https://www.cnblogs.com/kexianting/p/8508207.html)
+>总结：
+- 1、equals方法用于比较对象的内容是否相等（覆盖以后）
+- 2、hashcode方法只有在集合中用到
+- 3、当覆盖了equals方法时，比较对象是否相等将通过覆盖后的equals方法进行比较（判断对象的内容是否相等）。
+- 4、将对象放入到集合中时，首先判断要放入对象的hashcode值与集合中的任意一个元素的hashcode值是否相等，如果不相等直接将该对象放入集合中。如果hashcode值相等，然后再通过equals方法判断要放入对象与集合中的任意一个对象是否相等，如果equals判断不相等，直接将该元素放入到集合中，否则不放入。
